<resources>
    <string name="app_name">StockOps</string>
    <string name="author">Author :</string>
    <string name="release_date">Release Date :</string>
    <string name="ratings">Ratings :</string>
    <string name="_0_0">0.0</string>
    <string name="description">Description :</string>
    <string name="trailers">Trailers :</string>
    <string name="reviews">Reviews :</string>
    <string name="sort_by_popular">Sort By Popular</string>
    <string name="sort_by_ratings">Sort By Ratings</string>
    <string name="my_favourites">My Favourites</string>
    <string name="trailer_item">Trailer Item</string>
    <string name="movie_card_item">Movie Card Item</string>
    <string name="poster_banner">Poster Banner</string>
    <string name="favorite_icon_image">Favorite Icon Image</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="banner_landscape">Banner Landscape</string>
    <string name="empty_land">Empty land</string>
    <string name="favorite_icon_land">Favorite ICon land</string>
    <string name="title_activity_stock_options_list">StockOptionsList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_options_list">OptionsList</string>
</resources>
