<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/wood"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="6dp"
        tools:context="stockops.view.MovieDetailsActivity">
        <RelativeLayout
            android:id="@+id/bannerRL"
            android:background="@drawable/wood"
            android:layout_width="match_parent"
            android:layout_height="180dp">
            <ImageView
                android:contentDescription="@string/poster_banner"
                android:id="@+id/posterBanner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/empty" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/topRL"
            android:background="@drawable/wood"
            android:layout_width="match_parent"
            android:layout_below="@+id/bannerRL"
            android:layout_height="200dp">

            <ImageView
                android:contentDescription="@string/poster_banner"
                android:id="@+id/posterImageView"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:src="@drawable/empty" />

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:textColor="#ffffff"
                android:textSize="26sp"
                android:textStyle="bold"
                tools:ignore="UnknownId"
                tools:text="Movie Title"
                android:layout_alignParentRight="true" />

            <ImageView
                android:contentDescription="@string/favorite_icon_image"
                android:id="@+id/favIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/titleTextView"
                android:layout_marginBottom="65dp"
                android:background="@drawable/fav_empty"
                android:layout_alignLeft="@+id/titleTextView" />

            <TextView
                android:id="@+id/tVRelease"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/titleTextView"
                android:layout_marginBottom="40dp"
                android:text="@string/release_date"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_alignLeft="@+id/titleTextView" />

            <TextView
                android:id="@+id/tVRatings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignStart="@+id/titleTextView"
                android:layout_marginBottom="14dp"
                android:text="@string/ratings"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_alignLeft="@+id/titleTextView" />

            <TextView
                android:id="@+id/tVreleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tVRelease"
                android:layout_toEndOf="@+id/tVRelease"
                android:text="@string/_0_0"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_toRightOf="@+id/tVRelease" />

            <TextView
                android:id="@+id/tVRatVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/tVRatings"
                android:layout_toEndOf="@+id/tVRatings"
                android:text="@string/_0_0"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_toRightOf="@+id/tVRatings" />

            <TextView
                android:id="@+id/tVfav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/favIcon"
                android:layout_marginEnd="26dp"
                android:text="@string/add_to_favorites"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:visibility="visible"
                android:layout_alignParentRight="true"
                android:layout_marginRight="26dp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/middleRL"
            android:layout_below="@+id/topRL"
            android:layout_marginTop="5dp"
            android:paddingLeft="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12sp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/tVdescriptionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="left"
                android:text="@string/description"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/tVdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tVdescriptionTitle"
                android:paddingLeft="15sp"
                android:text="@string/description"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                android:paddingStart="15sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tVtrailer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tVdescription"
                android:layout_marginTop="10dp"
                android:gravity="left"
                android:text="@string/trailers"
                android:textColor="#ffffff"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_alignParentLeft="true"
                tools:ignore="RtlHardcoded" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/trailerLL"
            android:background="@drawable/wood"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_below="@+id/middleRL"
            android:layout_centerHorizontal="true">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailerRV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

        <TextView
            android:id="@+id/tVreviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12sp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/trailerLL"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/reviews"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            tools:ignore="RtlHardcoded,RtlSymmetry" />
        <LinearLayout
            android:id="@+id/reviewsLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tVreviews">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/reviewsRV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>